# anas-rabhi.github.io

./: .gitignore  404.html  CNAME  README.md  SEO.md  _config.yml  index.html  llms.txt  mkdocs.yml  plan_articles.md  pyproject.toml  requirements.txt  sitemap.xml
.cursor/rules/: blog-rule.mdc  prompt.mdc
.github/workflows/: ci.yml
_data/: contact.yml  share.yml
_posts/: 2024-02-18-nouveaux-frameworks-de-l'ia.md  2024-02-28-new_genai_frameworks.md  2024-02-28-nouveaux_frameworks_ia_gen_1.md  2024-05-11-DSPy.md  2024-08-04-Over one year of learning and building with LLMs.md
_tabs/: about.md  links.md  ressources.md
a-propos/: index.html
agents-ia/: index.html
blog/: index.html
blog/archive/2024/: index.html
blog/archive/2025/: index.html
blog/archive/2026/: index.html
blog/category/agent-ia/: index.html
blog/category/blog/: index.html
blog/category/cas-dusage/: index.html
blog/category/ia/: index.html
blog/category/llm/: index.html
blog/category/métier/: index.html
blog/category/rag/: index.html
comprendre-ia/: index.html
consultant-ia-toulouse/: index.html
docs/: a-propos.md  agents-ia.md  comprendre-ia.md  consultant-ia-toulouse.md  index.md  llms.txt  rag.md  robots.txt
docs/blog/: .authors.yml  index.md
docs/en/: a-propos.md  index.md
docs/notebooks/: index.md
docs/overrides/: main.html
docs/stylesheets/: extra.css
en/: index.html
en/a-propos/: index.html
en/blog/: index.html
hooks/: seo.py
notebooks/: index.html
overrides/: main.html
rag/: index.html
search/: search_index.json
stylesheets/: extra.css
(+267 files in other folders)
