[project]
name = "anas-rabhi-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "babel~=2.10",
    "colorama~=0.4",
    "jinja2~=3.0",
    "markdown~=3.2",
    "mkdocs~=1.6",
    "mkdocs-material>=9.6.21",
    "mkdocs-material-extensions~=1.3",
    "mkdocs-minify-plugin>=0.8.0",
    "paginate~=0.5",
    "pygments~=2.16",
    "pymdown-extensions~=10.2",
    "regex>=2022.4",
    "requests~=2.26",
]
